--- a/Dev_Notebooks/BobbyScratch.ipynb
+++ b/Dev_Notebooks/BobbyScratch.ipynb
@@ -219,7 +219,7 @@
     "url = \"https://api.themoviedb.org/3/genre/movie/list?language=en\"\n",
     "headers = {\n",
     "    \"accept\": \"application/json\",\n",
-    "    \"Authorization\": \"Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIwYTNlZTFhNDUyYTkwZWQ2OWIwNjMzNDBhZjlhZjFkOCIsInN1YiI6IjY0Y2FiYmUzNDNjZDU0MDExYzhjZTQwMyIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.PUiNT5UDbCjZYIyCUDQzPJiQ3nERUW3LBUCqBz0oUEU\"\n",
+    "    \"Authorization\": \"Bearer "token" \"\n",
     "}\n",
     "\n",
     "response = requests.get(url, headers=headers)\n",
